feat(main): add boxes for article categories

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,5 @@ $blue_primary: #0088cc;
 $grey_nav: #444;
 $bg_light_grey: #f7f7f7;
 $text_grey: #888;
+$blue_darker: #0074AD;
+$light_black: #212529;
