feat(LatestArticles): add counter pages

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@
 $blue_primary: #0088cc;
 $grey_nav: #444;
 $bg_light_grey: #f7f7f7;
+$soft_gray: #d6d6d6;
 $text_grey: #888;
 $blue_darker: #0074AD;
 $light_black: #212529;
