feat: add footer with top and low sections

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,6 @@ $soft_gray: #d6d6d6;
 $text_grey: #888;
 $blue_darker: #0074AD;
 $light_black: #212529;
+$bg_footer_top: #212529;
+$bg_footer_low: #1C2023;
+$footer_grey: #555;
